# gtdtxt

./: .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml  gtdtxt.rb  reference-todo.gtd
ci/: before_deploy.sh  script.sh
examples/: todo.gtd
src/: lib.rs  main.rs
