[package]
name = "gtdtxt"
version = "0.9.1"
authors = ["Alberto Leal <mailforalberto@gmail.com>"]

[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`

[dependencies.debug_unreachable]
version = "0.1"

[dependencies.chomp]
git = "https://github.com/m4rw3r/chomp"
rev = "c1287f2e7ee1558d50a8cab95e1bf900f5a47061"
# version = "~0.2.5"

[dependencies.chrono]
version = "0.2"

[dependencies.colored]
version = "1.2"

[dependencies.clap]
version = "2.9"
features = [ "suggestions", "color" ]

[dependencies.version]
version = "2"
