[package]
name = "gtdtxt"
version = "0.13.0"
authors = ["Alberto Leal <mailforalberto@gmail.com>"]

# src: http://stackoverflow.com/a/26946705/412627

[lib]
name = "gtdtxt"
path = "src/lib.rs"

[[bin]]
doc = false
name = "gtdtxt"
path = "src/main.rs"

[profile.dev]
opt-level = 0      # controls the `--opt-level` the compiler builds with
debug = true       # controls whether the compiler passes `-g`

[dependencies.debug_unreachable]
version = "0.1"

[dependencies.chomp]
git = "https://github.com/dashed/chomp.git"
branch = "macro-fix2"
# temporary

# ref = "1ef44b699c2c9b0d22c4f70fe3199a4124b1dd53"
# git = "https://github.com/m4rw3r/chomp"
# rev = "c1287f2e7ee1558d50a8cab95e1bf900f5a47061"
# version = "~0.2.5"

[dependencies.chrono]
version = "0.2"

[dependencies.colored]
version = "1.2"

[dependencies.clap]
version = "2.9"
features = [ "suggestions", "color" ]

[dependencies.version]
version = "2"

[dependencies.enum-set]
git = "https://github.com/contain-rs/enum-set"
rev = "c6e7daf0de920897389d3418ab01d0a0bc25200a"

[dependencies]
clippy = {version = "*", optional = true}

[features]
default = []
